Add example tfvars file

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,6 @@
 
 # .tfvars files
 *.tfvars
+# to be shown as example
+!example.tfvars
 ##########################################################################################
