Remove ASG and ELB

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 # to be shown as example
 !example.tfvars
 ##########################################################################################
+*.out
